[project]
name = "ltx-video-mcp"
version = "1.0.0"
description = "LTX-Video MCP Server für Claude Code"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
ltx-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
